--- a/index.html
+++ b/index.html
@@ -67,27 +67,27 @@
     <!-- services section start -->
     <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">My services</h2>
+            <h2 class="title">Mes services</h2>
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <div class="text">Developpeur Web</div>
+                        <p>Programmer, styliser un site pour que lorsque tu arrives tu sois émerveillé devant ce chef d'oeuvre</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <div class="text">Advertising</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <div class="text">Publicité</div>
+                        <p>"Quand on a du talent, on se doit d'en tirer profit" je ferai en sorte que l'on voit tes travaux</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <div class="text">Monteur vidéo</div>
+                        <p>Rien n'égal un film de Christopher Nolan, mais on s'y rapprochera si je m'occupe de tes contenus vidéos</p>
                     </div>
                 </div>
                </div>
